[package]
name = "tav"
version = "0.1.0"
authors = ["mudox <imudox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

tui = "0.15.0"
termion = "1.5.6"

log = "0.4.14"
pretty_env_logger = "0.4.0"

dirs = "3.0.2"
glob = "0.3.0"

toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
