[package]
name = "tav"
version = "0.1.1"
authors = ["Mudox <imudox@gmail.com>"]
description = "Tmux Naigator"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = "3.0.0-beta.2"

# ui
console = "0.14.1"
tui = "0.15.0"

# logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# file system
dirs = "3.0.2"
glob = "0.3.0"

# config
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
